[project]
name = "image-processing"
version = "0.1.0"
description = "Image processing project with inpainting and classification"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "opencv-python>=4.13.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
